--- a/config/macros.dtsi
+++ b/config/macros.dtsi
@@ -32,7 +32,7 @@ macro_shift_tab: macro_shift_tab{
   compatible = "zmk,behavior-macro";
   label = "macro_shift_tab";
   #binding-cells = <0>;
-  bindings = <&macro_press &kp LSHFT>, <&macro_tap &kp TAB>, <&macro_release &kp LSHFT>
+  bindings = <&macro_press &kp LSHFT>, <&macro_tap &kp TAB>, <&macro_release &kp LSHFT>;
 };
 macro_quotes: macro_quotes{
 compatible = "zmk,behavior-macro";
