--- a/config/macros.dtsi
+++ b/config/macros.dtsi
@@ -22,6 +22,12 @@ label = "macro_spectacle_right";
 #binding-cells = <0>;
 bindings = <&macro_press &kp LEFT_ALT &kp LEFT_COMMAND>, <&macro_tap &kp RIGHT>, <&macro_release &kp LEFT_ALT &kp LEFT_COMMAND>;
 };
+macro_spectacle_fullscreen: macro_spectacle_fullscreen{
+compatible = "zmk,behavior-macro";
+label = "macro_spectacle_fullscreen";
+#binding-cells = <0>;
+bindings = <&macro_press &kp LEFT_ALT &kp LEFT_COMMAND>, <&macro_tap &kp F>, <&macro_release &kp LEFT_ALT &kp LEFT_COMMAND>;
+};
 macro_spectacle_move: macro_spectacle_move{
 compatible = "zmk,behavior-macro";
 label = "macro_spectacle_move";
